# rules_typescript

./: .editorconfig  README.md  WORKSPACE.bazel  npm_data.bzl  package.json
rules/bzl/: workspace.bzl
rules/typescript/: BUILD.bazel
rules/typescript/bzl/: providers.bzl  rules.bzl
rules/typescript/compiler/: dts.ts  index.js  index.ts  js.ts
rules/typescript/compiler-js/: dts.js  dts.js.map  dts.ts  index.js  index.js.map  js.js  js.js.map  packages-manifest.txt
scripts/: format.sh  gen-deps.sh  gen-js.sh
tests/: BUILD.bazel  WORKSPACE.bazel  npm_data.bzl  package.json
tests/typescript/ambiant/: BUILD.bazel  ambiant.d.ts  example.ts
tests/typescript/basic/: BUILD.bazel  example.ts  lib.ts
tools/: BUILD.bazel
tools/bzl/: aspects.bzl
