load("@better_rules_javascript//rules/javascript/bzl:rules.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "js",
    srcs = glob(["compiler/**/*.js"]),
    deps = [
        "@better_rules_typescript_npm//argparse:js"
    ],
    strip_prefix = "better_rules_typescript/rules/typescript/compiler",
)
